--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 streamlit==1.29.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-plotly==5.15.0
-folium==0.14.0
-streamlit-folium==0.11.0
-python-dotenv==1.0.0  # For secrets management (optional)
+pandas>=2.1.0  # Updated for Py3.12
+numpy>=1.26.0  # Updated for Py3.12
+scikit-learn>=1.3.0
+plotly>=5.15.0
