--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.29.0
-pandas>=2.1.0  # Updated for Py3.12
-numpy>=1.26.0  # Updated for Py3.12
-scikit-learn>=1.3.0
-plotly>=5.15.0
+pandas==2.0.3
+numpy==1.24.3
+folium==0.14.0
+streamlit-folium==0.11.0  # Required to render Folium maps in Streamlit
