--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ streamlit==1.29.0
 pandas==2.0.3
 numpy==1.24.3
 folium==0.14.0
-streamlit-folium==0.11.0  # Required to render Folium maps in Streamlit
+streamlit-folium==0.11.0
+plotly==5.15.0
+scikit-learn==1.3.0
+python-dotenv==1.0.0
+geopy==2.3.0
